--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,3 +1,4 @@
+
 @inproceedings{2aaeb2c5e06e4b46884b54133426a374,
   title = {Everyday Literacy Practices of Deaf Students in Formal Education Contexts},
   author = {Iturriaga, Cristián},
@@ -5,3 +6,81 @@
   url = {http://www.seashelltrust.org.uk/professionals/deaf-children-now-changing-conversation-june-2019},
   langid = {english}
 }
+
+@incollection{8cbd0a1e291f4a8ba33dc51500a58336,
+  title = {When "Inclusion" Jeopardizes the Learning Opportunities of Deaf Students: {{The}} Case of {{Chile}}},
+  booktitle = {Deaf Education beyond the Western World},
+  author = {Lissi, María Rosa and Sebastián, Christian and Vergara, Martín and Iturriaga, Cristián},
+  editor = {Knoors, Harry and Brons, Maria and Marschark, Marc},
+  date = {2019},
+  pages = {323--342},
+  publisher = {{Oxford University Press}},
+  location = {{United States}},
+  isbn = {978-0-19-088051-4},
+  langid = {english}
+}
+
+@inproceedings{citurriaga_literacy,
+  title = {Literacy Practices of Deaf Children},
+  author = {Iturriaga, Cristián},
+  date = {2018-05},
+  langid = {english}
+}
+
+@article{iturriaga2022tjodsade,
+  title = {Deaf {{Students}}’ {{Translanguaging Practices}} in a {{Further Education College}}: {{Situating}} the {{Semiotic Repertoire}} in {{Social Interactions}}},
+  shorttitle = {Deaf {{Students}}’ {{Translanguaging Practices}} in a {{Further Education College}}},
+  author = {Iturriaga, Cristián and Young, Alys},
+  date = {2022-01-01},
+  journaltitle = {The Journal of Deaf Studies and Deaf Education},
+  shortjournal = {The Journal of Deaf Studies and Deaf Education},
+  volume = {27},
+  number = {1},
+  pages = {101--111},
+  issn = {1081-4159},
+  doi = {10.1093/deafed/enab033},
+  url = {https://doi.org/10.1093/deafed/enab033},
+  urldate = {2022-02-22},
+  abstract = {Further education (FE) colleges are the most usual postsecondary education destination for deaf young people in England. The role of college contexts in promoting deaf students’ learning warrants further exploration given the gaps in educational attainment common to deaf students and the potential for FE context to provide new and/or enhanced linguistic resources in comparison with school. The main research question is: How do deaf students’ translanguaging practices change according to the different contexts of interlocution in college? Translanguaging entails the flexible use of semiotic resources not bounded by named languages. This ethnographic study reports on five deaf college students’ translanguaging practices. Findings are presented under three moments of translanguaging: (1) translanguaging expanded, or deaf students widening their repertoires to engage in communication; (2) translanguaging restricted, or deaf students accommodating to their communicative partners’ needs; (3) translanguaging channeled, or the dominance of English countering the flexibility of translanguaging. It is argued that translanguaging should be promoted in whole classrooms. Otherwise, it will reinforce the dominance of hearing communication practices and hinder deaf students’ multilingual/multimodal repertoires.}
+}
+
+@article{lissi2017dei,
+  title = {Chilean Deaf Adolescents’ Experiences with Reading: Beliefs and Practices Associated to Different Types of Reading Activities},
+  shorttitle = {Chilean Deaf Adolescents’ Experiences with Reading},
+  author = {Lissi, María Rosa and Sebastián, Christian and Iturriaga, Cristián and Vergara, Martín},
+  date = {2017-04-03},
+  journaltitle = {Deafness \& Education International},
+  volume = {19},
+  number = {2},
+  pages = {84--94},
+  publisher = {{Routledge}},
+  issn = {1464-3154},
+  doi = {10.1080/14643154.2017.1363450},
+  url = {https://doi.org/10.1080/14643154.2017.1363450},
+  urldate = {2022-02-22},
+  abstract = {Deaf and hard-of-hearing (D/HH) students’ difficulties with written language have been consistently reported, but there are few studies about deaf students’ reading practices and experiences. This study aimed to characterize past and current reading experiences of Chilean D/HH adolescents. There were 46 participating students (7th–12th graders). Semi-structured interviews were conducted, which addressed students’ beliefs about reading, early experiences with books, preferred reading material, and perceptions of themselves as readers. The interviews were analyzed using qualitative content analysis. Results show that, for students, reading is an arduous and not much enjoyed activity; it becomes a task they try to avoid and which they circumscribe mostly to the school context. Some of them report enjoying interacting with other types of texts, especially when these include pictures, but they do not seem to consider them as true reading activities. Reading difficulties faced in their early school years are still present. Students tend to blame their difficulties on limited vocabulary knowledge and to ask for help from teachers and parents in order to understand text. Most of them are not independent readers, and having to rely on someone else to understand text perpetuates their view of themselves as non-readers. Results are interpreted within a sociocultural framework to understand learning and motivation; the discussion includes suggestions for improving teaching practices.},
+  keywords = {beliefs,Deaf students,motivation,reading experiences,reading practices},
+  annotation = {\_eprint: https://doi.org/10.1080/14643154.2017.1363450}
+}
+
+@article{lissi2017jdpd,
+  title = {Deaf and Hard of {{Hearing Students}}’ {{Opportunities}} for {{Learning}} in a {{Regular Secondary School}} in {{Chile}}: {{Teacher Practices}} and {{Beliefs}}},
+  shorttitle = {Deaf and Hard of {{Hearing Students}}’ {{Opportunities}} for {{Learning}} in a {{Regular Secondary School}} in {{Chile}}},
+  author = {Lissi, María Rosa and Iturriaga, Cristián and Sebastián, Christian and Vergara, Martín and Henríquez, Catalina and Hofmann, Sergio},
+  date = {2017-02-01},
+  journaltitle = {Journal of Developmental and Physical Disabilities},
+  shortjournal = {J Dev Phys Disabil},
+  volume = {29},
+  number = {1},
+  pages = {55--75},
+  issn = {1573-3580},
+  doi = {10.1007/s10882-016-9495-z},
+  url = {https://doi.org/10.1007/s10882-016-9495-z},
+  urldate = {2022-02-22},
+  abstract = {This study aimed to analyze the learning context of deaf and hard of hearing (D/HH) students in a Chilean high school, in which 50 D/HH students (7th to 12th grade) attend classes together with hearing classmates. Semi-structured interviews were conducted with seven high school teachers and five deaf education teachers, to explore their practices and beliefs regarding teaching D/HH students in regular classrooms. Ten classroom observations were also carried out in classes with and without the presence of a deaf education teacher. Interview data were analyzed using qualitative content analysis. Class observations enabled a better understanding of the context in which D/HH students and their teachers interact daily. Results from interview analysis provided information of teachers’ beliefs about D/HH students; regular teachers and deaf education teachers’ perceptions of the roles they play in students’ learning; accommodations made for D/HH students; and facilitators and barriers for teaching in classes with D/HH students. High school teachers’ report of their difficulties to teach D/HH students and their need to rely on deaf education teachers in the classroom was corroborated by classroom observations, which showed that most D/HH students were unable to follow the class in absence of special teacher’s support, and regular teachers had problems communicating with them. D/HH students’ opportunities for learning are highly restricted in such environment. Implications for educational inclusion policies and teacher preparation programs are discussed.},
+  langid = {english},
+  file = {C\:\\Users\\s60306fe\\Dropbox\\Bibliographies\\zotero-library\\Lissi et al\\Lissi_et_al_2017_Deaf_and_hard_of_Hearing_Students’_Opportunities_for_Learning_in_a_Regular.pdf}
+}
+
+
+
